--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css.css" />
     <title>Document</title>
   </head>
   <body>
-    <div>
-      <h1>hi</h1>
+    <div class="container">
+      <div class="gameScreen">
+        <button id="1" class="selection rock" onclick="game(this)">Rock</button>
+        <button id="2" class="selection paper" onclick="game(this)">
+          Paper
+        </button>
+        <button id="3" class="selection scissors" onclick="game(this)">
+          Scissors
+        </button>
+        <div class="score">
+          <h3 id="compChoice">Computer chose:</h3>
+          <h1 id="score">Score:</h1>
+        </div>
+      </div>
     </div>
     <script src="js.js"></script>
   </body>
